# arrabbiata-tui

./: Cargo.toml  README.md  flake.nix
src/: api.rs  app.rs  main.rs  ui.rs
