[package]
name = "arrabbiata-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
notify-rust = "4"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
